--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     ports:
      - 3307:3306
     volumes:
-     - ./db/config:/var/lib/mysql
+      - ./db/config:/var/lib/mysql
+      - ./db/init:/docker-entrypoint-initdb.d
     environment:
      - MARIADB_ROOT_PASSWORD=root
      - MARIADB_DATABASE=SID_in_beurzen
